creation of the base of the webpage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Journey to Software Engineer</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Gaël Deschamps</h1>
+        <h2>Journey to Software Engineer</h2>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#social">Social Links</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h3>About Me</h3>
+        <p>Welcome to my portfolio! I am a software engineer with a passion for developing innovative solutions.</p>
+    </section>
+
+    <section id="portfolio">
+        <h3>Portfolio</h3>
+        <ul>
+            <li>Project 1: Description of project 1.</li>
+            <li>Project 2: Description of project 2.</li>
+            <li>Project 3: Description of project 3.</li>
+        </ul>
+    </section>
+
+    <section id="resume">
+        <h3>Resume</h3>
+        <p>You can download my resume <a href="#">here</a>.</p>
+    </section>
+
+    <section id="social">
+        <h3>Social Links</h3>
+        <ul>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">GitHub</a></li>
+            <li><a href="#">Twitter</a></li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Gaël Deschamps</p>
+    </footer>
+</body>
+</html>
+
+
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background: #4CAF50;
+    color: white;
+    padding: 10px 0;
+    text-align: center;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+section {
+    padding: 20px;
+    margin: 10px 0;
+    border: 1px solid #ddd;
+}
+
+h3 {
+    color: #4CAF50;
+}
+
+footer {
+    text-align: center;
+    padding: 10px 0;
+    background: #4CAF50;
+    color: white;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
