--- a/index.html
+++ b/index.html
@@ -13,21 +13,32 @@
         <h3 class="title">welcome to my journey as a Software Developer</h3>
         <nav class="nav">
             <ul class="nav-links">
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="resume.html">Resume</a></li>
-                <li><a href="social.html">Social Links</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="content">
-        <!-- Contenu de la page d'accueil -->
+    <section id="about">
         <h3>About Me</h3>
+        <img src="images/DESCHAMPS Gaël C21.jpg" alt="About Me Image" class="about-me-image">
         <p>Welcome to my portfolio! I am a software engineer with a passion for developing innovative solutions.</p>
     </section>
 
+    <section id="portfolio">
+        <!-- Contenu du portfolio -->
+        <h3>Portfolio</h3>
+        <p>Here are some of my projects...</p>
+    </section>
+
     <footer>
+        <h3>Social Links</h3>
+        <ul>
+            <li><a href="https://twitter.com/yourtwitterhandle"><img src="twitter-logo.png" alt="Twitter"></a></li>
+            <li><a href="https://www.linkedin.com/in/yourlinkedinprofile"><img src="linkedin-logo.png" alt="LinkedIn"></a></li>
+            <li><a href="https://github.com/yourgithubprofile"><img src="github-logo.png" alt="GitHub"></a></li>
+        </ul>
         <p>&copy; 2024 Gaël Deschamps</p>
     </footer>
 </body>
