--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header>
-        <h1 class="title">Hello World</h1>
-        <h2 class="title">My Name is Gaël Deschamps</h2>
-        <h3 class="title">welcome to my journey as a Software Developer</h3>
+        <img src="images/hello world.gif" alt="Header GIF" class="header-gif">
+        <h3 class="title">My Name is</h3>
+        <h1 class="title"> Gaël Deschamps</h1>
+        <h2 class="title">welcome to my journey as a Software Developer</h2>
         <nav class="nav">
             <ul class="nav-links">
                 <li><a href="#about">About Me</a></li>
