--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Journey to Software Engineer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
-        <img src="images/hello world.gif" alt="Header GIF" class="header-gif">
+        <div class="centered">
+            <img src="images/hello world.gif" alt="Header GIF" class="header-gif">
+        </div>
         <h3 class="title">My Name is</h3>
         <h1 class="title"> Gaël Deschamps</h1>
         <h2 class="title">welcome to my journey as a Software Developer</h2>
@@ -23,7 +27,9 @@
 
     <section id="about">
         <h3>About Me</h3>
-        <img src="images/DESCHAMPS Gaël C21.jpg" alt="About Me Image" class="about-me-image">
+        <div class="centered">
+            <img src="images/DESCHAMPS Gaël C21.jpg" alt="About Me Image" class="about-me-image">
+        </div>
         <p>Welcome to my portfolio! I am a software engineer with a passion for developing innovative solutions.</p>
     </section>
 
@@ -37,10 +43,12 @@
         <h3>Social Links</h3>
         <ul>
             <li><a href="https://twitter.com/yourtwitterhandle"><img src="twitter-logo.png" alt="Twitter"></a></li>
-            <li><a href="https://www.linkedin.com/in/yourlinkedinprofile"><img src="linkedin-logo.png" alt="LinkedIn"></a></li>
+            <li><a href="https://www.linkedin.com/in/yourlinkedinprofile"><img src="linkedin-logo.png"
+                        alt="LinkedIn"></a></li>
             <li><a href="https://github.com/yourgithubprofile"><img src="github-logo.png" alt="GitHub"></a></li>
         </ul>
         <p>&copy; 2024 Gaël Deschamps</p>
     </footer>
 </body>
+
 </html>
