--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="centered">
-            <img src="images/hello world.gif" alt="Header GIF" class="header-gif">
+            <img src="images/hello world.gif" alt="Hello World GIF" class="header-gif">
         </div>
         <h3 class="title">My Name is</h3>
         <h1 class="title"> Gaël Deschamps</h1>
