--- a/resume.html
+++ b/resume.html
@@ -2,14 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
-    <link rel="stylesheet" href="styles.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<h1 class="title">My Resume</h1>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <h1>My Resume</h1>
-  <embed src="images/Gaël DESCHAMPS-Software Engineer 2024.pdf" type="application/pdf" width="100%" height="100%">
-  <p><a href="images/Gaël DESCHAMPS-Software Engineer 2024.pdf" download>Download my resume</a></p>
+	<div class="pdf-container">
+		<embed src="images/Gaël DESCHAMPS-Software Engineer 2024.pdf" type="application/pdf" width="100%" height="100%">
+	</div>
+	<p><a href="images/Gaël DESCHAMPS-Software Engineer 2024.pdf" download>Download my resume</a></p>
 </body>
+
 </html>
