creation of footer

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <footer>
         <h3>Social Links</h3>
         <ul>
-            <li><a href="https://twitter.com/yourtwitterhandle"><img src="twitter-logo.png" alt="Twitter"></a></li>
-            <li><a href="https://www.linkedin.com/in/yourlinkedinprofile"><img src="linkedin-logo.png"
+            <li><a href="mailto:g.deschamps@hotmail.fr"><img src="images/Microsoft_Office_Outlook_Logo_512px.png" alt="Contact"></a></li>
+            <li><a href="https://www.linkedin.com/in/gdeschampsdev/"><img src="images/LI-In-Bug.png"
                         alt="LinkedIn"></a></li>
-            <li><a href="https://github.com/yourgithubprofile"><img src="github-logo.png" alt="GitHub"></a></li>
+            <li><a href="https://github.com/GTDeschamps"><img src="images/github-mark-white.png" alt="GitHub"></a></li>
         </ul>
         <p>&copy; 2024 Gaël Deschamps</p>
     </footer>
