--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <section id="about">
-        <h3>About Me</h3>
+        <h3 class="title">About Me</h3>
         <div class="centered">
             <img src="images/DESCHAMPS Gaël C21.jpg" alt="About Me Image" class="about-me-image">
         </div>
@@ -33,12 +33,12 @@
 
     <section id="portfolio">
         <!-- Contenu du portfolio -->
-        <h3>Portfolio</h3>
+        <h3 class="title">Portfolio</h3>
         <p>Here are some of my projects...</p>
     </section>
 
     <footer>
-        <h3>Social Links</h3>
+        <h3 class="title">Social Links</h3>
         <ul>
             <li><a href="mailto:g.deschamps@hotmail.fr"><img src="images/Microsoft_Office_Outlook_Logo_512px.png" alt="Contact"></a></li>
             <li><a href="https://www.linkedin.com/in/gdeschampsdev/"><img src="images/LI-In-Bug.png"
