--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <section id="about">
-        <h3 class="title">About Me</h3>
+        <h3 class="title2">About Me</h3>
         <div class="centered">
             <img src="images/DESCHAMPS Gaël C21.jpg" alt="About Me Image" class="about-me-image">
         </div>
@@ -33,7 +33,7 @@
 
     <section id="portfolio">
         <!-- Contenu du portfolio -->
-        <h3 class="title">Portfolio</h3>
+        <h3 class="title2">Portfolio</h3>
         <p>Here are some of my projects...</p>
     </section>
 
