add project and about me

--- a/index.html
+++ b/index.html
@@ -28,13 +28,34 @@
         <div class="centered">
             <img src="images/DESCHAMPS Gaël C21.jpg" alt="About Me Image" class="about-me-image">
         </div>
-        <p>Welcome to my portfolio! I am a software engineer with a passion for developing innovative solutions.</p>
+        <p>Hello; My Name is Gaël.
+            I'm Student at HolbertonSchool Laval since june 2023.
+            Passionate about IT, I wanted to match my professional career to my personal aspirations.
+            This is why I decided to embark on this training, more particularly by specializing in the field of AR/VR.
+            </p>
     </section>
 
     <section id="portfolio">
         <!-- Contenu du portfolio -->
         <h3 class="title2">Portfolio</h3>
         <p>Here are some of my projects...</p>
+
+        <!-- Projet 1 -->
+    <div class="project">
+        <h4>UniverSound</h4>
+        <img src="images/UniversoundLogo.png" alt="universound" class="project-image">
+        <p>UniverSound: Your Personalized Musical Universe
+            UniverSound goes beyond being a mere music streaming platform.
+            It's a space where music comes alive, where every note resonates with the user's soul.
+            Whether you're a passionate music lover or an occasional listener,
+            UniverSound provides a unique and tailor-made experience.</p>
+        <a href="https://lien-vers-le-projet1.com">Voir le projet</a>
+        <div class="languages">
+            <img src="images/png-transparent-react-react-native-logos-brands-in-colors-icon-thumbnail.png" alt="REACT">
+            <img src="images/png-clipart-javascript-open-logo-number-js-angle-text-thumbnail.png" alt="JavaScript">
+            <!-- Ajouter d'autres langages si nécessaire -->
+        </div>
+    </div>
     </section>
 
     <footer>
