--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <li><a href="https://www.linkedin.com/in/gdeschampsdev/"><img src="images/LI-In-Bug.png"
                         alt="LinkedIn"></a></li>
             <li><a href="https://github.com/GTDeschamps"><img src="images/github-mark-white.png" alt="GitHub"></a></li>
+            <li><a href="https://medium.com/@6818"><img src="images/medium_logo_icon_187624.webp" alt="Medium"></a></li>
         </ul>
         <p>&copy; 2024 Gaël Deschamps</p>
     </footer>
