--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-            <img src="images/hello world.gif" alt="Hello World GIF" class="header-gif">
+        <img src="images/hello world.gif" alt="Hello World GIF" class="header-gif">
         <h3 class="title">My Name is</h3>
         <h1 class="title"> Gaël Deschamps</h1>
         <h2 class="title">welcome to my journey as a Software Developer</h2>
@@ -32,7 +32,7 @@
             I'm Student at HolbertonSchool Laval since june 2023.
             Passionate about IT, I wanted to match my professional career to my personal aspirations.
             This is why I decided to embark on this training, more particularly by specializing in the field of AR/VR.
-            </p>
+        </p>
     </section>
 
     <section id="portfolio">
@@ -41,29 +41,33 @@
         <p>Here are some of my projects...</p>
 
         <!-- Projet 1 -->
-    <div class="project">
-        <h4>UniverSound</h4>
-        <img src="images/UniversoundLogo.png" alt="universound" class="project-image">
-        <p>UniverSound: Your Personalized Musical Universe
-            UniverSound goes beyond being a mere music streaming platform.
-            It's a space where music comes alive, where every note resonates with the user's soul.
-            Whether you're a passionate music lover or an occasional listener,
-            UniverSound provides a unique and tailor-made experience.</p>
-        <a href="https://lien-vers-le-projet1.com">Voir le projet</a>
-        <div class="languages">
-            <img src="images/png-transparent-react-react-native-logos-brands-in-colors-icon-thumbnail.png" alt="REACT">
-            <img src="images/png-clipart-javascript-open-logo-number-js-angle-text-thumbnail.png" alt="JavaScript">
-            <!-- Ajouter d'autres langages si nécessaire -->
+        <div class="project">
+            <h4>UniverSound</h4>
+            <img src="images/UniversoundLogo.png" alt="universound" class="project-image">
+            <p>UniverSound: Your Personalized Musical Universe
+                UniverSound goes beyond being a mere music streaming platform.
+                It's a space where music comes alive, where every note resonates with the user's soul.
+                Whether you're a passionate music lover or an occasional listener,
+                UniverSound provides a unique and tailor-made experience.</p>
+            <ul class="nav-links">
+                <a href="https://lien-vers-le-projet1.com">Voir le projet</a>
+            </ul>
+            <div class="languages">
+                <img src="images/png-transparent-react-react-native-logos-brands-in-colors-icon-thumbnail.png"
+                    alt="REACT">
+                <img src="images/png-clipart-javascript-open-logo-number-js-angle-text-thumbnail.png" alt="JavaScript">
+                <!-- Ajouter d'autres langages si nécessaire -->
+            </div>
         </div>
-    </div>
     </section>
 
     <footer>
         <h3 class="title">Social Links</h3>
         <ul>
-            <li><a href="mailto:g.deschamps@hotmail.fr"><img src="images/Microsoft_Office_Outlook_Logo_512px.png" alt="Contact"></a></li>
-            <li><a href="https://www.linkedin.com/in/gdeschampsdev/"><img src="images/LI-In-Bug.png"
-                        alt="LinkedIn"></a></li>
+            <li><a href="mailto:g.deschamps@hotmail.fr"><img src="images/Microsoft_Office_Outlook_Logo_512px.png"
+                        alt="Contact"></a></li>
+            <li><a href="https://www.linkedin.com/in/gdeschampsdev/"><img src="images/LI-In-Bug.png" alt="LinkedIn"></a>
+            </li>
             <li><a href="https://github.com/GTDeschamps"><img src="images/github-mark-white.png" alt="GitHub"></a></li>
             <li><a href="https://medium.com/@6818"><img src="images/medium_logo_icon_187624.webp" alt="Medium"></a></li>
         </ul>
