--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 UniverSound provides a unique and tailor-made experience.</p>
             <ul class="nav-links">
                 <a href="https://lien-vers-le-projet1.com">Voir le projet</a>
+                <a href="https://medium.com/@6818/universound-my-first-portfolio-project-bd6d5f9a0f7f">Article Medium</a>
             </ul>
             <div class="languages">
                 <img src="images/png-transparent-react-react-native-logos-brands-in-colors-icon-thumbnail.png"
