--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <img src="images/hello world.gif" alt="Hello World GIF" class="header-gif">
+        <div class="centered">
+            <img src="images/hello world.gif" alt="Hello World GIF" class="header-gif">
+        </div>
         <h3 class="title">My Name is</h3>
         <h1 class="title"> Gaël Deschamps</h1>
         <h2 class="title">welcome to my journey as a Software Developer</h2>
@@ -51,7 +53,8 @@
                 UniverSound provides a unique and tailor-made experience.</p>
             <ul class="nav-links">
                 <li><a href="https://lien-vers-le-projet1.com">Voir le projet</a></li>
-                <li><a href="https://medium.com/@6818/universound-my-first-portfolio-project-bd6d5f9a0f7f">Article Medium</a></li>
+                <li><a href="https://medium.com/@6818/universound-my-first-portfolio-project-bd6d5f9a0f7f">Article
+                        Medium</a></li>
             </ul>
             <div class="languages">
                 <img src="images/png-transparent-react-react-native-logos-brands-in-colors-icon-thumbnail.png"
