modife project structure

--- a/index.html
+++ b/index.html
@@ -51,17 +51,18 @@
                 It's a space where music comes alive, where every note resonates with the user's soul.
                 Whether you're a passionate music lover or an occasional listener,
                 UniverSound provides a unique and tailor-made experience.</p>
-            <ul class="nav-links">
-                <li><a href="https://lien-vers-le-projet1.com">Voir le projet</a></li>
-                <li><a href="https://medium.com/@6818/universound-my-first-portfolio-project-bd6d5f9a0f7f">Article
-                        Medium</a></li>
-            </ul>
             <div class="languages">
+                <h4>"Langages Used</h4>
                 <img src="images/png-transparent-react-react-native-logos-brands-in-colors-icon-thumbnail.png"
                     alt="REACT">
                 <img src="images/png-clipart-javascript-open-logo-number-js-angle-text-thumbnail.png" alt="JavaScript">
                 <!-- Ajouter d'autres langages si nécessaire -->
             </div>
+            <ul class="nav-links">
+                <li><a href="https://lien-vers-le-projet1.com">Voir le projet</a></li>
+                <li><a href="https://medium.com/@6818/universound-my-first-portfolio-project-bd6d5f9a0f7f">Article
+                        Medium</a></li>
+            </ul>
         </div>
     </section>
 
