--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
     <section id="portfolio">
         <!-- Contenu du portfolio -->
         <h3 class="title2">Portfolio</h3>
-        <p>Here are some of my projects...</p>
 
         <!-- Projet 1 -->
         <div class="project">
-            <h4>UniverSound</h4>
+            <h4 class="centered">UniverSound</h4>
             <img src="images/UniversoundLogo.png" alt="universound" class="project-image">
             <p>UniverSound: Your Personalized Musical Universe
                 UniverSound goes beyond being a mere music streaming platform.
@@ -52,7 +51,7 @@
                 Whether you're a passionate music lover or an occasional listener,
                 UniverSound provides a unique and tailor-made experience.</p>
             <div class="languages">
-                <h5>"Langages Used</h5>
+                <h5>Langages Used</h5>
                 <img src="images/png-transparent-react-react-native-logos-brands-in-colors-icon-thumbnail.png"
                     alt="REACT">
                 <img src="images/png-clipart-javascript-open-logo-number-js-angle-text-thumbnail.png" alt="JavaScript">
