modify resume link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="resume.html">Resume</a></li>
+                <li class=" resume-link"><a href="resume.html">Resume</a></li>
             </ul>
         </nav>
     </header>
