--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="project">
             <h4 class="centered">UniverSound</h4>
             <img src="images/UniversoundLogo.png" alt="universound" class="project-image">
-            <p> # Your Personalized Musical Universe:
-                UniverSound goes beyond being a mere music streaming platform.
+            <p> Your Personalized Musical Universe:</p>
+            <p>UniverSound goes beyond being a mere music streaming platform.
                 It's a space where music comes alive, where every note resonates with the user's soul.
                 Whether you're a passionate music lover or an occasional listener,
                 UniverSound provides a unique and tailor-made experience.</p>
