--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
                 <!-- Ajouter d'autres langages si nécessaire -->
             </div>
             <ul class="nav-links">
-                <li><a href="https://universound.fr">Voir le projet</a></li>
-                <li><a href="https://medium.com/@6818/universound-my-first-portfolio-project-bd6d5f9a0f7f">Article
-                        Medium</a></li>
+                <li><a href="https://universound.fr">Project</a></li>
+                <li><a href="https://medium.com/@6818/universound-my-first-portfolio-project-bd6d5f9a0f7f">Blog</a></li>
             </ul>
         </div>
     </section>
