--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="mailto:g.deschamps@hotmail.fr">Contact</a></li>
                 <li class=" resume-link"><a href="resume.html">Resume</a></li>
             </ul>
         </nav>
@@ -65,8 +66,6 @@
     <footer>
         <h3 class="title">Social Links</h3>
         <ul>
-            <li><a href="mailto:g.deschamps@hotmail.fr"><img src="images/Microsoft_Office_Outlook_Logo_512px.png"
-                        alt="Contact"></a></li>
             <li><a href="https://www.linkedin.com/in/gdeschampsdev/"><img src="images/LI-In-Bug.png" alt="LinkedIn"></a>
             </li>
             <li><a href="https://github.com/GTDeschamps"><img src="images/github-mark-white.png" alt="GitHub"></a></li>
