--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#testimonial">Testimonial</a></li>
                 <li><a href="mailto:g.deschamps@hotmail.fr">Contact</a></li>
                 <li class=" resume-link"><a href="resume.html">Resume</a></li>
             </ul>
@@ -61,6 +62,17 @@
                 <li><a href="https://medium.com/@6818/universound-my-first-portfolio-project-bd6d5f9a0f7f">Blog</a></li>
             </ul>
         </div>
+    </section>
+
+    <section id="testimonial">
+        <h3 class="title2">Testimonial:</h3>
+        <h4> Erwan Cremey (peer in Holberton School)</h4>
+        <p>
+        Gael fait preuve d'une grande détermination et met tout en œuvre pour réussir.
+        Face aux difficultés, il n'hésite pas à se remettre en question pour mieux rebondir et les surmonter.
+        De plus, sa bonne humeur et son attitude positive rendent la collaboration avec lui très agréable.
+        Travailler avec lui a été une expérience enrichissante, et ses compétences transversales ont été un atout précieux.
+        </p>
     </section>
 
     <footer>
