--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 
     <section id="testimonial">
         <h3 class="title2">Testimonial:</h3>
+        <div >
+            <img src="images/CREMEY Erwan C21.jpg" alt="Erwan Cremay" class="about-me-image">
+
         <h4> Erwan Cremey (peer in Holberton School)</h4>
         <p>
         Gael fait preuve d'une grande détermination et met tout en œuvre pour réussir.
@@ -73,6 +76,7 @@
         De plus, sa bonne humeur et son attitude positive rendent la collaboration avec lui très agréable.
         Travailler avec lui a été une expérience enrichissante, et ses compétences transversales ont été un atout précieux.
         </p>
+    </div>
     </section>
 
     <footer>
