centrered name of testimonial

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div >
             <img src="images/CREMEY Erwan C21.jpg" alt="Erwan Cremay" class="about-me-image">
 
-        <h4> Erwan Cremey (peer in Holberton School)</h4>
+        <h4 class="centered"> Erwan Cremey (peer in Holberton School)</h4>
         <p>
         Gael fait preuve d'une grande détermination et met tout en œuvre pour réussir.
         Face aux difficultés, il n'hésite pas à se remettre en question pour mieux rebondir et les surmonter.
