--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 
     <section id="about">
         <h3 class="title2">About Me:</h3>
-        <div class="centered">
-            <img src="images/DESCHAMPS Gaël C21.jpg" alt="About Me Image" class="about-me-image">
-        </div>
+        <img src="images/DESCHAMPS Gaël C21.jpg" alt="About Me Image" class="about-me-image">
         <p>Hello; My Name is Gaël.
             I'm Student at HolbertonSchool Laval since june 2023.
             Passionate about IT, I wanted to match my professional career to my personal aspirations.
@@ -43,7 +41,7 @@
 
         <!-- Projet 1 -->
         <div class="project">
-            <h4 class="centered">UniverSound</h4>
+            <h4>UniverSound</h4>
             <img src="images/UniversoundLogo.png" alt="universound" class="project-image">
             <p> Your Personalized Musical Universe:</p>
             <p>UniverSound goes beyond being a mere music streaming platform.
@@ -66,17 +64,18 @@
 
     <section id="testimonial">
         <h3 class="title2">Testimonial:</h3>
-        <div >
+        <div>
             <img src="images/CREMEY Erwan C21.jpg" alt="Erwan Cremay" class="about-me-image">
 
-        <h4 class="centered"> Erwan Cremey (peer in Holberton School)</h4>
-        <p>
-        Gael fait preuve d'une grande détermination et met tout en œuvre pour réussir.
-        Face aux difficultés, il n'hésite pas à se remettre en question pour mieux rebondir et les surmonter.
-        De plus, sa bonne humeur et son attitude positive rendent la collaboration avec lui très agréable.
-        Travailler avec lui a été une expérience enrichissante, et ses compétences transversales ont été un atout précieux.
-        </p>
-    </div>
+            <h4> Erwan Cremey (peer in Holberton School)</h4>
+            <p>
+                Gael fait preuve d'une grande détermination et met tout en œuvre pour réussir.
+                Face aux difficultés, il n'hésite pas à se remettre en question pour mieux rebondir et les surmonter.
+                De plus, sa bonne humeur et son attitude positive rendent la collaboration avec lui très agréable.
+                Travailler avec lui a été une expérience enrichissante, et ses compétences transversales ont été un
+                atout précieux.
+            </p>
+        </div>
     </section>
 
     <footer>
