--- a/index.html
+++ b/index.html
@@ -69,12 +69,10 @@
 
             <h4> Erwan Cremey (peer in Holberton School)</h4>
             <p>
-                Gael fait preuve d'une grande détermination et met tout en œuvre pour réussir.
-                Face aux difficultés, il n'hésite pas à se remettre en question pour mieux rebondir et les surmonter.
-                De plus, sa bonne humeur et son attitude positive rendent la collaboration avec lui très agréable.
-                Travailler avec lui a été une expérience enrichissante, et ses compétences transversales ont été un
-                atout précieux.
-            </p>
+                Gael shows great determination and does everything possible to succeed.
+                Faced with difficulties, he does not hesitate to question himself in order to bounce back better and overcome them.
+                In addition, his good humor and positive attitude make working with him very pleasant.
+                Working with him was an enriching experience, and his transversal skills were a valuable asset.
         </div>
     </section>
 
