Style for testimonial

--- a/index.html
+++ b/index.html
@@ -64,15 +64,17 @@
 
     <section id="testimonial">
         <h3 class="title2">Testimonial:</h3>
-        <div>
-            <img src="images/CREMEY Erwan C21.jpg" alt="Erwan Cremay" class="about-me-image">
-
-            <h4> Erwan Cremey (peer in Holberton School)</h4>
-            <p>
-                Gael shows great determination and does everything possible to succeed.
-                Faced with difficulties, he does not hesitate to question himself in order to bounce back better and overcome them.
-                In addition, his good humor and positive attitude make working with him very pleasant.
-                Working with him was an enriching experience, and his transversal skills were a valuable asset.
+        <div class="testimonial-container">
+            <div class="testimonial-frame">
+                <img src="images/CREMEY Erwan C21.jpg" alt="Erwan Cremay" class="testimonial-image">
+                <h4 class="testimonial-name">Erwan Cremey (peer in Holberton School)</h4>
+                <p class="testimonial-text">
+                    Gael shows great determination and does everything possible to succeed.
+                    Faced with difficulties, he does not hesitate to question himself in order to bounce back better and overcome them.
+                    In addition, his good humor and positive attitude make working with him very pleasant.
+                    Working with him was an enriching experience, and his transversal skills were a valuable asset.
+                </p>
+            </div>
         </div>
     </section>
 
